@@ -4,6 +4,7 @@ Alejandro Camazón Pinilla
 Alejandro Lumbreras-Calle
 Antonio Diaz Diaz
 Carlos Marrero de La Rosa
+Elizabeth Sola
 Hok Kan (Ronald) Tsang
 Joseph Putko
 Phil Wyett
